2007-01-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added focuslock toggle option.

2007-01-25  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c: Use a fallback method if iconv is not correct.

2007-01-20  Marcus Meissner  <marcus@jet.franken.de>

	* Added Canon PowerShot A420.
	* Added Canon Digital IXUS 900Ti.
	* Added Philips PSA235 and Samsung YH-925GS from libmtp.
	* Added SanDisk Sansa c250.
	* Added Nikon CoolPix S6.

2007-01-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp-pack.c, ptp.h:
	  Free datastructures on closing the camera.

2007-01-14  Marcus Meissner  <marcus@jet.franken.de>

	* usb.c: read in 64kb blobs again (512 bytes read are
	  ineffecient).

	* library.c: On delete and rmdir also remove the
	  information from the internal handles and objectinfos.
	  Otherwise remove, upload, remove, upload cycles
	  will not work ... and gphotofs needs them.

2007-01-10  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added NULL check in MTP objlist reader.

2007-01-06  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h, ptp-private.h, usb.c:

	  Rewrote the USB lowlevel communication layer.
	  Merged  write_func, read_func, check_int and check_int_fast
	  into the ptp_usb_sendreq etc.
	  Split the latter into its own file, usb.c.

2007-01-03  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Get endpoint maxpacketsize from the USB
	  port settings and use it in 0 write detection code.

	* library.c: More MTP mime types (from libmtp folks).

	* library.c: Rewrote the MIME type handling to
	  take vendorextensionid into account. (me)

	* library.c: Various new USB ids out of Ubuntu launchpad
	  bugreports.
		Canon PowerShot SD40
		Kodak EasyShare C433
		Kodak EasyShare V705
		Casio EX-Z700

2007-01-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Report storage information 
	  dynamically using the new API.

	* ptp.c,ptp.h: From libmtp folks: